# taskflow-api

./: .env.example  .gitignore  README.md  app.db  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy-frontend.yml
app/: main.py  models.py
backend/: .dockerignore  Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt  startup.sh
backend/alembic/: env.py
backend/alembic/versions/: 6d2ecba9170c_add_kanban_domain_tables.py  d3b4a80507a6_create_user_table.py
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/boards/: models.py  router.py  schemas.py  service.py
backend/app/routers/: users.py
backend/app/tasks/: models.py  router.py  schemas.py  service.py
backend/app/users/: models.py  router.py  schemas.py
backend/tests/: conftest.py  test_boards.py  test_tasks.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Board.tsx  BoardFormModal.tsx  Column.tsx  DeleteModal.tsx  Header.tsx  Modal.tsx  Sidebar.tsx  TaskCard.tsx  TaskDetailModal.tsx  TaskFormModal.tsx  icons.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/types/: index.ts
